[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Peter Graham <peterghm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
